<resources>
    <string name="app_name">Smart Switch</string>
    <string name="choisir">Choisir</string>
    <string name="heure">Heure</string>
    <string name="service">Service</string>
    <string name="batterie">Batterie</string>
    <string name="position">Position GPS</string>
    <string name="reseau">Réseau conseillé</string>
    <string name="zone">Zone inconnue</string>
    <string name="GPS">GPS désactivé</string>
    <string name="wifi">Wi-Fi</string>
    <string name="cellulaire">Cellulaire</string>


    <string-array name="positionsGPS">
        <item>Amphi Ada</item>
        <item>Amphi Blaise</item>
        <item>Accueil</item>
        <item>Cafétéria</item>
        <item>Début couloir</item>
        <item>Milieu couloir</item>
        <item>Fin couloir</item>
    </string-array>

    <string-array name="services">
        <item>Consultation de mails</item>
        <item>Navigation web</item>
        <item>Streaming vidéo / Réseaux sociaux</item>
    </string-array>
</resources>